--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "nodemon index.js",
-		"start": "node index.js"
+		"start": "node index.js",
+		"seed:user": "node user-seeder.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -27,6 +28,8 @@
 		"express-session": "^1.18.1",
 		"express-validator": "^7.2.0",
 		"helmet": "^8.0.0",
+		"i18next": "^23.16.8",
+		"i18next-fs-backend": "^2.6.0",
 		"ioredis": "^5.5.0",
 		"jsonwebtoken": "^9.0.2",
 		"method-override": "^3.0.0",
