Add user role to UserDto and User model. Introduce admin seeder and database cleaning scripts in package.json. Update scripts for seeding and cleaning database entries.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"dev": "nodemon index.js",
 		"start": "node index.js",
-		"seed:user": "node user-seeder.js"
+		"seed:admin": "node scripts/admin-seeder.js",
+		"clean:db": "node scripts/clean-database.js"
 	},
 	"keywords": [],
 	"author": "",
