Add deleteTournament method in TournamentController and corresponding route. Update file handling in tournament and user services to ensure proper deletion of associated files. Enhance database cleaning scripts in package.json with new clean:uploads command.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 		"dev": "nodemon index.js",
 		"start": "node index.js",
 		"seed:admin": "node scripts/admin-seeder.js",
-		"clean:db": "node scripts/clean-database.js"
+		"clean:db": "node scripts/clean-database.js",
+		"clean:uploads": "node scripts/clean-uploads.js",
+		"clean:db:uploads": "node scripts/clean-database.js --clean-uploads"
 	},
 	"keywords": [],
 	"author": "",
